# AbstractVM

./: .gitignore  CMakeLists.txt  Makefile  avm
src/: IOperand.h  Lexer.cpp  Lexer.h  LexicalException.cpp  LexicalException.h  Operand.h  OperandFactory.cpp  OperandFactory.h  OperandSizeException.cpp  OperandSizeException.h  OperandStack.cpp  OperandStack.h  Parser.cpp  Parser.h  StackException.cpp  StackException.h  main.cpp
test_cases/: 01_push_int8.avm  02_push_all_types.avm  03_dump_all_types.avm  04_add_type_simple.avm  05_add_types_hard.avm  06_sub_type_simple.avm  07_sub_types_hard.avm  08_mul_type_simple.avm  09_mul_types_hard.avm  10_div_type_simple.avm  11_div_types_hard.avm  12_mod_type_simple.avm  13_mod_types_hard.avm  14_pop_int8.avm  15_pop_all_types.avm  16_assert_simple.avm  17_assert_hard.avm  18_print_simple.avm  19_print_hard.avm  20_syntax_error.avm  21_dump_error.avm  hello_world.avm  test1  test2
unittests/: main.cpp  test_int8.cpp  test_operands.cpp  test_operands2.cpp  test_stack.cpp
